--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
     "lodash": "^4.17.11",
+    "mongoose": "^5.5.1",
+    "nodemon": "^1.18.11",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-redux": "^6.0.1",
